workloads/kube-burner/workloads/large-networkpolicy-egress/01_banp_deny_traffic_open_restricted.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          anplabel: anp-open
      podSelector:
        matchLabels:
          anplabel: anp-open
  ingress:
  - name: "deny-all-ingress-from-anp-restricted"
    action: "Deny"
    from:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-restricted
        podSelector:
          matchLabels:
            anplabel: anp-restricted
  egress:
  - name: "deny-all-egress-to-anp-restricted"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            anplabel: anp-restricted
        podSelector:
          matchLabels:
            anplabel: anp-restricted
